--- a/src/view/xml/searchStudent.fxml
+++ b/src/view/xml/searchStudent.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +18,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentController">
    <children>
       <Pane prefHeight="64.0" prefWidth="1280.0">
          <children>
@@ -32,7 +37,7 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="160.0">
                            <children>
-                              <Label style="-fx-max-width: 80;" fx:id="userName">
+                              <Label fx:id="userName" style="-fx-max-width: 80;">
                                  <font>
                                     <Font name="Verdana" size="14.0" />
                                  </font>
@@ -219,6 +224,11 @@
                               <Pagination maxPageIndicatorCount="4" prefWidth="148.0" style="-fx-font-size: 14; -fx-font-family: Verdana;" />
                            </children>
                         </HBox>
+                        <Button fx:id="registerStudentsByPrincipal" layoutX="31.0" layoutY="40.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE; -fx-border-radius: 4;" text="Cadastrar Alunos">
+                           <font>
+                              <Font name="Verdana" size="12.0" />
+                           </font>
+                        </Button>
                      </children>
                   </Pane>
                </children>
