--- a/src/view/xml/searchStudent.fxml
+++ b/src/view/xml/searchStudent.fxml
@@ -75,6 +75,7 @@
                   </Pane>
                </children>
             </Pane>
+            <Label fx:id="error" layoutX="318.0" layoutY="14.0" prefHeight="15.0" prefWidth="655.0" />
          </children>
       </Pane>
       <Pane layoutY="64.0" prefHeight="656.0" prefWidth="300.0" style="-fx-background-color: #F4F4F4;">
@@ -170,7 +171,8 @@
                   <TableView prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
                      <columns>
                         <TableColumn minWidth="0.0" prefWidth="178.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Matrícula" />
-                        <TableColumn minWidth="0.0" prefWidth="500.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
+                        <TableColumn minWidth="0.0" prefWidth="425.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
+                        <TableColumn fx:id="buttons" prefWidth="75.0" />
                      </columns>
                   </TableView>
                   <Pane prefHeight="352.0" prefWidth="680.0">
