--- a/src/view/xml/searchClassroom.fxml
+++ b/src/view/xml/searchClassroom.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
@@ -13,7 +18,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClassroomController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClassroomController">
    <children>
       <Pane prefHeight="64.0" prefWidth="1280.0">
          <children>
@@ -32,7 +37,7 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="160.0">
                            <children>
-                              <Label style="-fx-max-width: 80;" fx:id="userName">
+                              <Label fx:id="userName" style="-fx-max-width: 80;">
                                  <font>
                                     <Font name="Verdana" size="14.0" />
                                  </font>
@@ -163,10 +168,11 @@
                   </Pane>
                   <TableView fx:id="classroomsTable" prefHeight="501.0" prefWidth="680.0" style="-fx-pref-height: 400;">
                      <columns>
-                        <TableColumn fx:id="classroomName" editable="false" prefWidth="336.0" style="font: 10px;" text="Disciplina" />
-                        <TableColumn fx:id="classroomPlace" editable="false" prefWidth="123.0" text="Local" />
-                        <TableColumn fx:id="classroomSchedule" editable="false" prefWidth="97.0" text="Horario" />
-                        <TableColumn fx:id="classroomStatus" editable="false" prefWidth="123.0" text="Status" />
+                        <TableColumn fx:id="classroomName" editable="false" prefWidth="294.0" style="font: 10px;" text="Disciplina" />
+                        <TableColumn fx:id="classroomPlace" editable="false" prefWidth="119.0" text="Local" />
+                        <TableColumn fx:id="classroomSchedule" editable="false" prefWidth="124.0" text="Horario" />
+                        <TableColumn fx:id="classroomStatus" editable="false" prefWidth="83.0" text="Status" />
+                        <TableColumn fx:id="buttons" prefWidth="75.0" />
                      </columns>
                   </TableView>
                </children>
