--- a/src/view/xml/searchProfessor.fxml
+++ b/src/view/xml/searchProfessor.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +18,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfessorController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfessorController">
    <children>
       <Pane prefHeight="64.0" prefWidth="1280.0">
          <children>
@@ -32,7 +37,7 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="160.0">
                            <children>
-                              <Label style="-fx-max-width: 80;" fx:id="userName">
+                              <Label fx:id="userName" style="-fx-max-width: 80;">
                                  <font>
                                     <Font name="Verdana" size="14.0" />
                                  </font>
@@ -162,14 +167,15 @@
             </Pane>
             <Pane layoutY="112.0" prefHeight="544.0">
                <children>
-                  <TableView prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
+                  <TableView fx:id="professorsTable" prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
                     <columns>
-                      <TableColumn minWidth="0.0" prefWidth="679.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
+                      <TableColumn fx:id="professorName" minWidth="0.0" prefWidth="543.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
+                        <TableColumn fx:id="buttons" prefWidth="131.0" />
                     </columns>
                   </TableView>
                   <Pane prefHeight="352.0" prefWidth="680.0">
                      <children>
-                        <Pane layoutY="32.0" prefHeight="40.0" prefWidth="680.0">
+                        <Pane fx:id="registerProfessor" layoutY="32.0" prefHeight="40.0" prefWidth="680.0">
                            <children>
                               <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0">
                                  <children>
