--- a/src/view/xml/searchStudent.fxml
+++ b/src/view/xml/searchStudent.fxml
@@ -170,8 +170,8 @@
                <children>
                   <TableView prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
                      <columns>
-                        <TableColumn minWidth="0.0" prefWidth="178.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Matrícula" />
-                        <TableColumn minWidth="0.0" prefWidth="425.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
+                        <TableColumn fx:id="studentRegistration" minWidth="0.0" prefWidth="178.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Matrícula" />
+                        <TableColumn fx:id="studentName" minWidth="0.0" prefWidth="425.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
                         <TableColumn fx:id="buttons" prefWidth="75.0" />
                      </columns>
                   </TableView>
@@ -226,7 +226,7 @@
                               <Pagination maxPageIndicatorCount="4" prefWidth="148.0" style="-fx-font-size: 14; -fx-font-family: Verdana;" />
                            </children>
                         </HBox>
-                        <Button fx:id="registerStudentsByPrincipal" layoutX="31.0" layoutY="40.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE; -fx-border-radius: 4;" text="Cadastrar Alunos">
+                        <Button fx:id="createButton" layoutX="31.0" layoutY="40.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE; -fx-border-radius: 4; -fx-font-weight: 800; -fx-font-size: 14;" text="Cadastrar Alunos">
                            <font>
                               <Font name="Verdana" size="12.0" />
                            </font>
