--- a/src/view/xml/searchStudent.fxml
+++ b/src/view/xml/searchStudent.fxml
@@ -168,7 +168,7 @@
             </Pane>
             <Pane layoutY="112.0" prefHeight="544.0">
                <children>
-                  <TableView prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
+                  <TableView fx:id="studentsTable" prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
                      <columns>
                         <TableColumn fx:id="studentRegistration" minWidth="0.0" prefWidth="178.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Matrícula" />
                         <TableColumn fx:id="studentName" minWidth="0.0" prefWidth="425.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
