--- a/src/view/xml/classroom.fxml
+++ b/src/view/xml/classroom.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClassroomController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClassroomController">
    <children>
       <Pane prefHeight="64.0" prefWidth="300.0" style="-fx-background-color: #FBFBFB;">
          <children>
@@ -57,12 +62,6 @@
             </Label>
          </children>
       </Pane>
-      <Pane layoutX="980.0" prefHeight="64.0" prefWidth="300.0">
-         <children>
-            <Label fx:id="userName" layoutX="14.0" layoutY="25.0" />
-            <Hyperlink layoutX="250.0" layoutY="21.0" onAction="#logout" style="-fx-underline: false;" text="Sair" textFill="#282828" />
-         </children>
-      </Pane>
       <Pane layoutX="300.0" layoutY="64.0" prefHeight="64.0" prefWidth="680.0" style="-fx-background-color: #FFFFFF;">
          <children>
             <Label layoutX="14.0" layoutY="25.0" text="Docente">
@@ -71,7 +70,7 @@
                </font>
             </Label>
             <Label fx:id="professorName" layoutX="112.0" layoutY="26.0" prefHeight="15.0" prefWidth="269.0" style="-fx-background-color: #FFFFFF;" />
-            <Button fx:id="gradeButton" layoutX="486.0" layoutY="14.0" mnemonicParsing="false" onAction="#grade" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: DEDEDE;" text="Notas e Frequencia">
+            <Button layoutX="486.0" layoutY="14.0" mnemonicParsing="false" onAction="#grade" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: DEDEDE;" text="Notas e Frequencia">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -86,5 +85,49 @@
             <TableColumn fx:id="studentEmail" editable="false" prefWidth="217.0" text="E-mail" />
         </columns>
       </TableView>
+      <Pane layoutX="980.0" prefHeight="64.0" prefWidth="300.0">
+         <children>
+            <Pane layoutX="90.0" layoutY="16.0" prefHeight="32.0" prefWidth="160.0">
+               <children>
+                  <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="160.0">
+                     <children>
+                        <Label fx:id="userName" style="-fx-max-width: 80;">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="32.0" prefWidth="160.0">
+                     <children>
+                        <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../resources/img/icons/arrow_down.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="160.0">
+                     <children>
+                        <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../resources/img/icons/user.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </HBox>
+                  <Pane layoutX="160.0" prefHeight="32.0" prefWidth="50.0">
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="32.0" prefWidth="50.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#logout" text="Sair" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </Pane>
+               </children>
+            </Pane>
+         </children>
+      </Pane>
    </children>
 </Pane>
