--- a/src/view/xml/editClassroom.fxml
+++ b/src/view/xml/editClassroom.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -11,7 +16,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane prefHeight="64.0" prefWidth="300.0" style="-fx-background-color: #FBFBFB;">
          <children>
@@ -46,18 +51,10 @@
             </Hyperlink>
          </children>
       </Pane>
-      <Pane layoutX="300.0" prefHeight="64.0" prefWidth="680.0" style="-fx-background-color: #FBFBFB;" />
-      <Pane layoutX="980.0" prefHeight="64.0" prefWidth="300.0">
+      <Pane layoutX="300.0" prefHeight="64.0" prefWidth="680.0" style="-fx-background-color: #FBFBFB;">
          <children>
-            <Label fx:id="userName" layoutX="14.0" layoutY="25.0" text="Joaozinho" />
-            <Hyperlink fx:id="exitLink" layoutX="250.0" layoutY="21.0" style="-fx-underline: false;" text="Sair" textFill="#282828" />
-         </children>
-      </Pane>
-      <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="1066.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../resources/icons/user.png" />
-         </image>
-      </ImageView>
+            <Label fx:id="error" layoutX="14.0" layoutY="25.0" prefHeight="15.0" prefWidth="645.0" textFill="RED" />
+         </children></Pane>
       <Pane layoutX="300.0" layoutY="64.0" prefHeight="656.0" prefWidth="680.0" style="-fx-background-color: #FFFFFF;">
          <children>
             <Label layoutX="14.0" layoutY="32.0" text="Editar Turma">
@@ -94,11 +91,11 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Button fx:id="selectStudents" layoutX="43.0" layoutY="395.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Selecionar alunos">
+            <Button layoutX="43.0" layoutY="395.0" mnemonicParsing="false" onAction="#selectStudents" prefHeight="40.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Selecionar alunos">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Button fx:id="registerClassroom" layoutX="44.0" layoutY="563.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="160.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Cadastrar Turma">
+            <Button layoutX="44.0" layoutY="563.0" mnemonicParsing="false" onAction="#registerClassroom" prefHeight="32.0" prefWidth="160.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Cadastrar Turma">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
@@ -107,7 +104,51 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <CheckBox layoutX="43.0" layoutY="336.0" mnemonicParsing="false" selected="true" />
+            <CheckBox fx:id="classroomStatus" layoutX="43.0" layoutY="336.0" mnemonicParsing="false" selected="true" />
+         </children>
+      </Pane>
+      <Pane layoutX="980.0" prefHeight="64.0" prefWidth="300.0">
+         <children>
+            <Pane layoutX="90.0" layoutY="16.0" prefHeight="32.0" prefWidth="160.0">
+               <children>
+                  <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="160.0">
+                     <children>
+                        <Label fx:id="userName" style="-fx-max-width: 80;">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="32.0" prefWidth="160.0">
+                     <children>
+                        <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../resources/img/icons/arrow_down.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="160.0">
+                     <children>
+                        <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../resources/img/icons/user.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </HBox>
+                  <Pane layoutX="160.0" prefHeight="32.0" prefWidth="50.0">
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="32.0" prefWidth="50.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#logout" text="Sair" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </Pane>
+               </children>
+            </Pane>
          </children>
       </Pane>
    </children>
