--- a/src/view/xml/gradesFrequency.fxml
+++ b/src/view/xml/gradesFrequency.fxml
@@ -15,25 +15,26 @@
                </font>
             </Label>
             <Label fx:id="subjectName" layoutX="131.0" layoutY="21.0" prefHeight="18.0" prefWidth="373.0" text="Programaçao Orientada a Objetos" />
+            <Label fx:id="error" layoutX="393.0" layoutY="21.0" prefHeight="15.0" prefWidth="230.0" textFill="RED" />
          </children>
       </Pane>
       <TableView fx:id="studentsTable" layoutY="56.0" prefHeight="362.0" prefWidth="640.0">
         <columns>
-          <TableColumn fx:id="registration" prefWidth="75.0" text="Matricula" />
+          <TableColumn fx:id="studentRegistration" prefWidth="75.0" text="Matricula" />
           <TableColumn fx:id="studentName" prefWidth="71.0" text="Aluno" />
-            <TableColumn fx:id="P1" prefWidth="59.0" text="Nota 1" />
-            <TableColumn fx:id="P2" prefWidth="58.0" text="Nota 2" />
-            <TableColumn prefWidth="55.0" text="Nota 3" />
-            <TableColumn fx:id="P4" prefWidth="89.0" text="Prova Final" />
-            <TableColumn fx:id="average" prefWidth="95.0" text="Media Final" />
-            <TableColumn fx:id="frequency" prefWidth="53.0" text="Faltas" />
+            <TableColumn fx:id="P11" prefWidth="59.0" text="Nota 1" />
+            <TableColumn fx:id="P21" prefWidth="58.0" text="Nota 2" />
+            <TableColumn fx:id="P31" prefWidth="55.0" text="Nota 3" />
+            <TableColumn fx:id="P41" prefWidth="89.0" text="Prova Final" />
+            <TableColumn fx:id="average1" prefWidth="95.0" text="Media Final" />
+            <TableColumn fx:id="frequency1" prefWidth="53.0" text="Faltas" />
             <TableColumn fx:id="frequencyPercentage" prefWidth="84.0" text="Frequencia" />
         </columns>
       </TableView>
       <Pane layoutY="418.0" prefHeight="56.0" prefWidth="640.0" style="-fx-background-color: #FBFBFB;">
          <children>
-            <Button fx:id="saveEditions" layoutX="262.0" layoutY="8.0" mnemonicParsing="false" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Salvar" />
-            <Button fx:id="finishClassroom" layoutX="466.0" layoutY="8.0" mnemonicParsing="false" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Finalizar Disciplina" />
+            <Button layoutX="262.0" layoutY="8.0" mnemonicParsing="false" onAction="#saveEditions" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Salvar" />
+            <Button layoutX="466.0" layoutY="8.0" mnemonicParsing="false" onAction="#finishClassroom" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Finalizar Disciplina" />
          </children>
       </Pane>
    </children>
