--- a/src/view/xml/editSubject.fxml
+++ b/src/view/xml/editSubject.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SubjectController">
    <children>
       <Label layoutX="155.0" layoutY="200.0" text="Nome da Disciplina" />
       <Label layoutX="155.0" layoutY="256.0" prefHeight="15.0" prefWidth="133.0" text="Codigo da Disciplina" />
@@ -22,7 +16,7 @@
       </Label>
       <Label layoutX="262.0" layoutY="137.0" text="Editar Disciplina" />
       <TextField fx:id="codeEdit" layoutX="155.0" layoutY="271.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
-      <Button layoutX="241.0" layoutY="367.0" mnemonicParsing="false" onAction="#saveEditions" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Salvar Mudanças" />
+      <Button layoutX="241.0" layoutY="367.0" mnemonicParsing="false" onAction="#update" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Salvar Mudanças" />
       <Label fx:id="error" layoutX="20.0" layoutY="28.0" prefHeight="15.0" prefWidth="603.0" textFill="RED" />
    </children>
 </Pane>
