--- a/src/view/xml/searchProfessor.fxml
+++ b/src/view/xml/searchProfessor.fxml
@@ -1,24 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Pagination?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfessorController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfessorController">
    <children>
       <Pane prefHeight="64.0" prefWidth="1280.0">
          <children>
@@ -75,6 +62,7 @@
                   </Pane>
                </children>
             </Pane>
+            <Label fx:id="error" layoutX="300.0" layoutY="14.0" prefHeight="40.0" prefWidth="573.0" textFill="RED" wrapText="true" />
          </children>
       </Pane>
       <Pane layoutY="64.0" prefHeight="656.0" prefWidth="300.0" style="-fx-background-color: #F4F4F4;">
@@ -169,86 +157,10 @@
                <children>
                   <TableView fx:id="professorsTable" prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
                     <columns>
-                      <TableColumn fx:id="professorName" minWidth="0.0" prefWidth="543.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
+                      <TableColumn fx:id="professorName" minWidth="0.0" prefWidth="543.0" text="Nome" />
                         <TableColumn fx:id="buttons" prefWidth="131.0" />
                     </columns>
                   </TableView>
-                  <Pane prefHeight="352.0" prefWidth="680.0">
-                     <children>
-                        <Pane fx:id="registerProfessor" layoutY="32.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0">
-                                 <children>
-                                    <Hyperlink style="-fx-text-fill: #284896; -fx-underline: false;" text="Ver Turmas" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </Pane>
-                        <Pane layoutY="72.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0">
-                                 <children>
-                                    <Hyperlink style="-fx-text-fill: #284896; -fx-underline: false;" text="Ver Turmas" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </Pane>
-                        <Pane layoutY="112.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0">
-                                 <children>
-                                    <Hyperlink style="-fx-text-fill: #284896; -fx-underline: false;" text="Ver Turmas" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </Pane>
-                        <Pane layoutY="152.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0">
-                                 <children>
-                                    <Hyperlink style="-fx-text-fill: #284896; -fx-underline: false;" text="Ver Turmas" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </Pane>
-                        <Pane layoutY="192.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0">
-                                 <children>
-                                    <Hyperlink style="-fx-text-fill: #284896; -fx-underline: false;" text="Ver Turmas" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </Pane>
-                        <Pane layoutY="232.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0">
-                                 <children>
-                                    <Hyperlink style="-fx-text-fill: #284896; -fx-underline: false;" text="Ver Turmas" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </Pane>
-                        <Pane layoutY="272.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0">
-                                 <children>
-                                    <Hyperlink style="-fx-text-fill: #284896; -fx-underline: false;" text="Ver Turmas" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </Pane>
-                        <Pane layoutY="312.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0">
-                                 <children>
-                                    <Hyperlink style="-fx-text-fill: #284896; -fx-underline: false;" text="Ver Turmas" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </Pane>
-                     </children>
-                  </Pane>
                   <Pane layoutY="360.0" prefHeight="184.0" prefWidth="680.0">
                      <children>
                         <HBox alignment="CENTER" layoutX="440.0" layoutY="40.0" prefHeight="32.0" prefWidth="240.0">
