--- a/src/view/xml/searchProfessor.fxml
+++ b/src/view/xml/searchProfessor.fxml
@@ -155,7 +155,7 @@
             </Pane>
             <Pane layoutY="112.0" prefHeight="544.0">
                <children>
-                  <TableView fx:id="professorsTable" prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
+                  <TableView fx:id="professorsTable" prefHeight="352.0" prefWidth="680.0">
                     <columns>
                       <TableColumn fx:id="professorName" minWidth="0.0" prefWidth="543.0" text="Nome" />
                         <TableColumn fx:id="buttons" prefWidth="131.0" />
